# abomonation_derive

./: Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: release-pr.yml  rust.yml
src/: lib.rs  utils.rs
tests/: test.rs
