[package]
name = "abomonation_derive_ng"
version = "0.5.0"
authors = ["Nika Layzell <nika@thelayzells.com>"]
description = "A custom derive plugin for abomonation"
license = "MIT"
repository = "https://github.com/lurk-lab/abomonation_derive"
documentation = "https://docs.rs/abomonation_derive_ng"
edition = "2021"
rust-version = "1.63"

[lib]
name = "abomonation_derive_ng"
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0.17"

[dev-dependencies]
abomonation = "0.7.3"
